--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,9 +11,12 @@
         <a class="nav-link" href="/listings/new">Add New Listing</a>
        </div>
        <div class="navbar-nav ms-auto">
+        <% if(!currUser){ %>
         <a class="nav-link active" aria-current="page" href="/signup">SignUp</a>
         <a class="nav-link" href="/login"> Login</a>
+        <% } %> <%  if(currUser){ %>
         <a class="nav-link" href="/logout">Logout</a>
+        <% } %>
        </div>
     </div>
   </div>
