image adjusted to required l&b

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -22,7 +22,7 @@
 
     <div class ="mb-3">
     Original Listing Image <br/>
-    <img src=" <%= listing.image.url %>" width="300" height="200">
+    <img src=" <%= original %>">
     </div>
 
       <div class = "mb-3">
