--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -39,7 +39,7 @@ Leave a Review
     <label for="rating" class="form-label"> Rating </label>
     <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
   </div>
-  <fieldset class="starability-basic">
+  <!-- <fieldset class="starability-basic">
     <legend>First rating:</legend>
     <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
     <input type="radio" id="first-rate1" name="rating" value="1" />
@@ -52,7 +52,7 @@ Leave a Review
     <label for="first-rate4" title="Very good">4 stars</label>
     <input type="radio" id="first-rate5" name="rating" value="5" />
     <label for="first-rate5" title="Amazing">5 stars</label>
-  </fieldset>
+  </fieldset> -->
   <div>
     <label for="comment">Comments</label>
     <textarea cols="30" rows="5" id="comment" name="review[comment]" class="form-control" required></textarea>
